edited api to connect to mongoDB

--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.16.3",
-    "mongoose": "^9.0.1",
+    "mongoose": "^9.0.0",
     "package": "^1.0.1"
   }
 }
