--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-	  "start": "node src/app.js"
+    "start": "node src/app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "package": "^1.0.1",
-    "express": "^4.16.3"
+    "dotenv": "^17.2.3",
+    "express": "^4.16.3",
+    "mongoose": "^9.0.1",
+    "package": "^1.0.1"
   }
 }
