--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.16.3",
     "mongoose": "^9.0.0",
-    "package": "^1.0.1"
+    "package": "^1.0.1",
+    "validator": "^13.15.23"
   }
 }
