--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,9 @@ web_modules/
 .env.*
 !.env.example
 
+# OpenAPI hash file (auto-generated)
+doc/.openapi.hash
+
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
