--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "express": "^4.16.3",
     "mongoose": "^9.0.0",
     "package": "^1.0.1",
-    "validator": "^13.15.23"
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "validator": "^13.15.23",
+    "yaml": "^2.8.2"
   }
 }
