--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "mongoose": "^9.0.0",
     "package": "^1.0.1",
     "swagger-jsdoc": "^6.2.8",
-    "validator": "^13.15.23"
+    "swagger-ui-express": "^5.0.1",
+    "validator": "^13.15.23",
+    "yaml": "^2.8.2"
   },
   "devDependencies": {
     "dotenv": "^17.2.3",
