--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.16.3",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.0",
     "package": "^1.0.1",
     "swagger-jsdoc": "^6.2.8",
