--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,60 @@
 MONGODB_URI=mongodb+srv://<username>:<password>@<url>/
 SUPER_SECRET=your_super_secret_key
+
+# Google OAuth Configuration
+GOOGLE_CLIENT_ID=your-google-client-id-here
+
+# ===== LOGGING CONFIGURATION =====
+
+# Abilita/disabilita completamente il logging
+# Valori: true | false
+# Default: true
+LOG_ENABLED=true
+
+# Livello minimo di log da registrare
+# Valori: error | warn | info | debug
+# Default: info
+# - error: solo errori critici
+# - warn: errori + warnings
+# - info: errori + warnings + informazioni generali
+# - debug: tutti i log inclusi dettagli di debug
+LOG_LEVEL=info
+
+# Output del log su console
+# Valori: true | false
+# Default: true
+LOG_TO_CONSOLE=true
+
+# Output del log su file
+# Valori: true | false
+# Default: false
+LOG_TO_FILE=false
+
+# Percorso del file di log (se LOG_TO_FILE=true)
+# Default: logs/app.log
+LOG_FILE_PATH=logs/app.log
+
+# ===== ESEMPI DI CONFIGURAZIONE =====
+
+# Sviluppo locale (verbose, solo console)
+# LOG_ENABLED=true
+# LOG_LEVEL=debug
+# LOG_TO_CONSOLE=true
+# LOG_TO_FILE=false
+
+# Produzione (solo errori, file + console)
+# LOG_ENABLED=true
+# LOG_LEVEL=error
+# LOG_TO_CONSOLE=true
+# LOG_TO_FILE=true
+# LOG_FILE_PATH=/var/log/orticello/app.log
+
+# Testing (logging disabilitato)
+# LOG_ENABLED=false
+
+# Staging (info level, file + console)
+# LOG_ENABLED=true
+# LOG_LEVEL=info
+# LOG_TO_CONSOLE=true
+# LOG_TO_FILE=true
+# LOG_FILE_PATH=logs/staging.log
