--- a/.env.example
+++ b/.env.example
@@ -46,7 +46,7 @@ LOG_FILE_PATH=logs/app.log
 # LOG_ENABLED=true
 # LOG_LEVEL=error
 # LOG_TO_CONSOLE=true
-# LOG_TO_FILE=true
+# LOG_TO_FILE=false
 # LOG_FILE_PATH=/var/log/orticello/app.log
 
 # Testing (logging disabilitato)
