--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -42,6 +42,7 @@ jobs:
   deploy:
     name: Wait for Deploy
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Wait for Render Deployment
         uses: bounceapp/render-action@0.12.0
