--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,7 +15,10 @@ jobs:
     env:
       SUPER_SECRET: ${{ secrets.SUPER_SECRET }}
       DB_URL: ${{ secrets.DB_URL }}
+      RENDER_TOKEN: ${{ secrets.RENDER_TOKEN }}
+      RENDER_ID: ${{ secrets.RENDER_ID }}
       LOG_ENABLED: false
+      
     
     environment: orticelloapi
 
@@ -47,8 +50,8 @@ jobs:
       - name: Wait for Render Deployment
         uses: bounceapp/render-action@0.12.0
         with:
-          render-token: ${{ secrets.RENDER_TOKEN }}
-          service-id: srv-d4sp5uje5dus73ar6uc0
+          render-token: $RENDER_TOKEN
+          service-id: $RENDER_ID
           retries: 20
           wait: 16000
           sleep: 30000
