--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,7 +21,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x]
+        node-version: [22.x]
 
     steps:
     - uses: actions/checkout@v3
@@ -39,15 +39,13 @@ jobs:
     - run: npm test
 
   deploy:
-    name: Wait for Deploy
+    name: Deploy to Render
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Wait for Render Deployment
-        uses: bounceapp/render-action@0.12.0
+      - name: Trigger deployment
+        uses: sws2apps/render-deployment@main #consider using pin for dependabot auto update
         with:
-          render-token: ${{ secrets.RENDER_TOKEN }}
-          service-id: ${{ secrets.RENDER_ID }}
-          retries: 20
-          wait: 16000
-          sleep: 30000
+          serviceId: ${{ secrets.RENDER_ID }}
+          apiKey: ${{ secrets.RENDER_TOKEN }}
+          #multipleDeployment: false #optional, default true
