--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "npm": ">=10.0.0"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^4.16.3",
