Implement new user management API to edit User information

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://<username>:<password>@<url>/
+MONGODB_URI=mongodb+srv://alirajafaizan_db_user:nehIBCyl9sW5gD7M@orticello.remfps2.mongodb.net/?appName=Orticello
 SUPER_SECRET=your_super_secret_key
 
 # Google OAuth Configuration
